Updated file names

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
-    <link rel="stylesheet" href="WebpageStyles/placeholder.css">
+    <link rel="stylesheet" href="WebpageStyles/index.css">
 </head>
 <body>
     <div id="loading-screen">
         <div class="spinner"></div>
         <p>Loading...</p>
     </div>
-    <script src="WebpageFunctionality/placeholder.js"></script>
+    <script src="WebpageFunctionality/index.js"></script>
 </body>
 </html>
