Updated index loading screen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <div class="spinner"></div>
-        <p>Loading...</p>
+        <h1 class="loading-text">LOADING</h1>
     </div>
     <script src="WebpageFunctionality/index.js"></script>
 </body>
