--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="loading-screen">
-        <h1 class="loading-text">LOADING</h1>
+        <h1 class="loading-text">
+            <span>L</span><span>O</span><span>A</span><span>D</span><span>I</span><span>N</span><span>G</span>
+        </h1>
     </div>
     <script src="WebpageFunctionality/index.js"></script>
 </body>
