Test loading screen updates

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 </head>
 <body>
 
-    <div id="loading-screen">
-        <h1 class="loading-text">
-            <span>L</span><span>O</span><span>A</span><span>D</span><span>I</span><span>N</span><span>G</span>
-        </h1>
+    <div id="stage">
         <button id="enter-button" style="display: none;">Enter</button>
     </div>
-    <div id="stage"></div>
 
 </body>
 </html>
